# multisig-transaction

./: .gitignore  Anchor.toml  README.md
programs/multisig-transaction/: Cargo.toml
programs/multisig-transaction/src/: constants.rs  errors.rs  lib.rs  types.rs
programs/multisig-transaction/src/instructions/: council.rs  deposit.rs  initialize.rs  mod.rs  reset.rs  withdraw.rs
programs/multisig-transaction/src/states/: global.rs  mod.rs  proposal.rs
tests/: multisig-transaction.ts
