[package]
name = "multisig-transaction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
author = "Tarun Jaiswal <tarunjais28@gmail.com>"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_transaction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
